- `dockerfile` multi staged, `jdeps` and `jlink` configured for smaller image footprint. - lighter alpine image used for redis. - java version updated from 11 to 17. - after using jlink, mysql connector requires `useSSL=false` specified in the db path. - `baseline-on-migrate` required for first time migration.